--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>プロフィール | Eito's Portfolio</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
-    <link href='css/style.css' rel='stylesheet'>
+    <link rel="icon" href="img/favicon.ico">
+    <link href='css/style.css' rel='stylesheet'>   
   </head>
   <body class='top'>
     <div class='container'>
@@ -38,8 +39,8 @@
                   木下瑛斗
                   <small>Kinoshita　Eito</small>
                 </h2>
-                <img alt='profile' src='img/prof2.png' align="left" style=”margin-right: 10px;>
-                <p class='layout-3'>
+                <img alt='profile' src='img/prof2.png' align="left">
+                <p>
                     　1997年8月12日生まれ<br>
                     　兵庫県神戸市出身<br>
                     　立命館大学 情報理工学部 メディア情報学科　在学中<br>
@@ -49,17 +50,16 @@
                     　好きなもの：銭湯、料理、人狼ゲーム、などなど
                   <br clear="left">
                 </p>
-
+    
                 <h3>
                   スキル
                 </h3>
-                 <p class='layout-3'>
+                 <p>
                      3級ウェブデザイン技能士(2018年4月取得)<br><br>
                      鋭意勉強中 <br>
                      HTML ------- ★★★☆☆ <br>
                      CSS  --------- ★★★☆☆ <br>
-                     JavaScript -- ★★☆☆☆ <br>
-                     <br>
+                     JavaScript -- ★★☆☆☆ <br><br>
                      授業で一通り学習<br>
                      C　----- ★★★★☆<br><br>
                      授業で使用した経験あり <br>
@@ -67,9 +67,7 @@
                      SQL  ------ ★★★☆☆ <br>
                      Unity -----★★☆☆☆ <br>
                      Perl　----- ★☆☆☆☆ <br>
-                     R　　  ----- ★☆☆☆☆ <br>
-                     <br>
-
+                     R　　  ----- ★☆☆☆☆ <br><br>
                      他 <br>
                      Microsoft Office -- ★★★★☆ <br>
                   </p>
