--- a/treasure.html
+++ b/treasure.html
@@ -5,6 +5,7 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>Treasure Hunter | Eito's Portfolio</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
+    <link rel="icon" href="img/favicon.ico">
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body class='top'>
@@ -34,7 +35,6 @@
             </div>
             <div class='main-body'>
               <div class='project-wrap'>
-                <div class='layout-12'>
                   <div class='layout-6'>
                     <h3>遺跡のモデリング</h3>
                     <p>
@@ -73,15 +73,14 @@
                       私は砂漠のステージにある遺跡と石板のモデリングをしました。3dのモデリングは初挑戦で、ソフトウェアの使い方を覚えるのに苦労しました。
                     </p>
                   </div>
-                </div>
-                <div class='layout-12 text-center projects-img-view'>
+                    <div class='work'>
                        <img alt='div site' src='img/title2.png'>
                        <img alt='div site' src='img/iseki.png'>
                        <img alt='div site' src='img/sekiban.png'>
                        <img alt='div site' src='img/3d.png'>
                        <img alt='div site' src='img/3d1.png'>
                        <img alt='div site' src='img/3d2.png'>
-                </div>
+                  </div>
               </div>
             </div>
           </main>
@@ -90,7 +89,7 @@
       <div class='footer-container'>
         <footer class='wrapper'>
           <small>
-            © 2019 — Kinoshita Eito
+            © 2019 — Kinoshita Eito 
           </small>
         </footer>
       </div>
