--- a/cook.html
+++ b/cook.html
@@ -5,6 +5,7 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>料理イラスト | Eito's Portfolio</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
+    <link rel="icon" href="img/favicon.ico">
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body class='top'>
@@ -34,7 +35,6 @@
             </div>
             <div class='main-body'>
               <div class='project-wrap'>
-                <div class='layout-12'>
                   <div class='layout-6'>
                     <h3>料理イラスト</h3>
                     <p>
@@ -67,10 +67,7 @@
                       サークルにて、私が初めて参加したプロジェクトで制作したイラストの一部。このプロジェクトは完成せずに終わったのでこのイラストが使用されることはなく悔しい思いをしました。
                     </p>
                   </div>
-                </div>
-                <div class='layout-12 text-center projects-img-view'>
                      <img alt='cook game' src='img/cook2.png' >
-                </div>
               </div>
             </div>
           </main>
@@ -79,7 +76,7 @@
       <div class='footer-container'>
         <footer class='wrapper'>
           <small>
-            © 2019 — Kinoshita Eito
+            © 2019 — Kinoshita Eito 
           </small>
         </footer>
       </div>
