--- a/fantagy.html
+++ b/fantagy.html
@@ -5,6 +5,7 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>決戦前夜 | Eito's Portfolio</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
+    <link rel="icon" href="img/favicon.ico">
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body class='top'>
@@ -34,7 +35,6 @@
             </div>
             <div class='main-body'>
               <div class='project-wrap'>
-                <div class='layout-12'>
                   <div class='layout-6'>
                     <h3>「決戦前夜」</h3>
                     <p>
@@ -62,10 +62,9 @@
                       コンセプトアート風のイラストをイメージして描いていました。タイトルは「決戦前夜」。
                     </p>
                   </div>
-                </div>
-                <div class='layout-12 text-center projects-img-view'>
-                     <img alt='fantagy' src='img/gameshow.jpg' >
-                </div>
+                  <div class='work'>
+                   <img alt='fantagy' src='img/gameshow.jpg'>
+                  </div>
               </div>
             </div>
           </main>
@@ -74,7 +73,7 @@
       <div class='footer-container'>
         <footer class='wrapper'>
           <small>
-            © 2019 — Kinoshita Eito
+            © 2019 — Kinoshita Eito 
           </small>
         </footer>
       </div>
