--- a/web.html
+++ b/web.html
@@ -5,6 +5,7 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>大学でのweb制作演習 | Eito's Portfolio</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
+    <link rel="icon" href="img/favicon.ico">
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body class='top'>
@@ -34,7 +35,6 @@
             </div>
             <div class='main-body'>
               <div class='project-wrap'>
-                <div class='layout-12'>
                   <div class='layout-6'>
                     <h3>大学の演習でのWebページ制作</h3>
                     <p>
@@ -64,16 +64,15 @@
                       私がWeb制作に興味を持つきっかけとなった演習。当時はまだHTMLについての知識はなく、寝る間を惜しんでパソコンと向き合っていました。
                     </p>
                   </div>
-                </div>
-                <div class='layout-12 text-center projects-img-view'>
-                       <img alt='web site' src='img/web_top.png'>
-                       <img alt='web site' src='img/web_mem.png'>
-                       <img alt='web site' src='img/web_history.png'>
-                       <img alt='web site' src='img/web_tec.png' >
-                       <img alt='web site' src='img/web_tec2.png'>
+                  <div class='work'>
+                     <img alt='web site' src='img/web_top.png'>
+                     <img alt='web site' src='img/web_mem.png'>
+                     <img alt='web site' src='img/web_history.png'>
+                     <img alt='web site' src='img/web_tec.png' >
+                     <img alt='web site' src='img/web_tec2.png'>
                      <img alt='web site' src='img/web_vision.png'>
                      <img alt='web site' src='img/web_ot.png' >
-                </div>
+                  </div>
               </div>
             </div>
           </main>
@@ -82,7 +81,7 @@
       <div class='footer-container'>
         <footer class='wrapper'>
           <small>
-            © 2019 — Kinoshita Eito
+            © 2019 — Kinoshita Eito 
           </small>
         </footer>
       </div>
