--- a/work.html
+++ b/work.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html class='no-js' lang='ja'>
+  <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>WORK | Eito's Portfolio</title>
-    <meta content='' name='description'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
+    <link rel="icon" href="img/favicon.ico">
     <link href='css/style.css' rel='stylesheet'>
-
   </head>
   <body class='top'>
     <div class='container'>
@@ -38,7 +38,7 @@
                 <ul class='clearfix'>
                   <li>
                     <a href='web.html'>
-                      <img alt='大学での課題制作' src='img/web_top.png'>
+                      <img alt='大学での課題制作' src='img/web_top_thum.png'>
                       <h5>
                         <small class='blue'>Web</small>
                         大学での課題制作
@@ -101,7 +101,7 @@
           <small>
              © 2019 — Kinoshita Eito
           </small>
-
+          
         </footer>
       </div>
     </div>
